...
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text=" Email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVHeader"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
...
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text=" Password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ID"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Enter your password"
        android:inputType="textPassword" />

    <!-- Button to register a new user -->
    <Button
        android:id="@+id/idBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/yellow"
        android:text="Log In"
        android:textAllCaps="false" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idBtnRegister"
        android:layout_marginTop="20dp"
...
