<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="Student Name"
            android:clickable="true"
            android:onClick="onTextClicked"/>
        <Button
            android:id="@+id/profileBtn"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/purple_200"
            android:text="View Profile"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="10dp" />

        <Button
            android:id="@+id/blockBtn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:background="@color/crimson"
            android:text="Block"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="10dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>