...
    android:textSize="16sp"
    android:background="@drawable/border"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:id="@+id/text_message" />

